--- a/homeassistant/automations.yaml
+++ b/homeassistant/automations.yaml
@@ -1,5 +1,5 @@
 - id: NibeActivateHighDemand
-  alias: Nibe Activate High Demand
+  alias: Nibe Activate High Demand Solis, >2kwh, klo 6-7.01 ja 17-20.01
   description: 'Niben veden lämpötilan aktivointi pörssisähkön mukaan.
 
 
@@ -7,13 +7,22 @@
   triggers:
   - trigger: time_pattern
     hours: '6'
-    minutes: 0
+    minutes: '1'
   - trigger: time_pattern
     hours: '7'
-    minutes: '0'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '17'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '18'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '19'
+    minutes: '1'
   - trigger: time_pattern
     hours: '20'
-    minutes: '0'
+    minutes: '1'
   conditions:
   - alias: Nordpool Max Today
     condition: numeric_state
@@ -21,54 +30,449 @@
     above: 3
     attribute: max
   - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_fi_eur_3_10_0255
+    attribute: current_price
+    below: 20
+  - condition: numeric_state
     entity_id: sensor.soliscloud_ac_output_total_power
     above: 2000
   - condition: numeric_state
     entity_id: water_heater.f470_hot_water
     attribute: current_temperature
-    below: 52
+    below: 46
   actions:
   - action: persistent_notification.create
     metadata: {}
     data:
       message: Nostetaan kuuman veden lämpötilaa, nykyinen lämpötila {{ state_attr("water_heater.f470_hot_water",
         "current_temperature") }} C.
-      title: 'Nibe Activate High Demand, ajankohta: {{ (now().timestamp()) | timestamp_custom(''%d.%m.%Y
-        klo %H:%M:%S'') }}'
+      title: 'Nibe Activate High Demand Solis >3kwh, ajankohta: {{ (now().timestamp())
+        | timestamp_custom(''%d.%m.%Y klo %H:%M:%S'') }}'
   - action: water_heater.set_operation_mode
     target:
       entity_id: water_heater.f470_hot_water
     data:
       operation_mode: high_demand
+  - action: input_boolean.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  - action: timer.start
+    metadata: {}
+    data:
+      duration: 00:15:00
+    target:
+      entity_id: timer.nibe_activate_heat_pump_15_min
   mode: single
 - id: '1747219368176'
-  alias: Nibe Activate Heat Pump, klo 6.25, 7.25 ja 20.25
+  alias: Nibe Activate Heat Pump, klo 5-7.16 ja 17-20.16
   description: 'Niben veden lämpötilan inaktivointi pörssisähkön mukaan.
 
 
     Otetaan pois päältä korkean lämpötilan aktivointi.'
   triggers:
   - trigger: time_pattern
+    hours: '5'
+    minutes: '30'
+  - trigger: time_pattern
     hours: '6'
-    minutes: '25'
+    minutes: '30'
   - trigger: time_pattern
     hours: '7'
-    minutes: '25'
+    minutes: '30'
+  - trigger: time_pattern
+    hours: '8'
+    minutes: '30'
+  - trigger: time_pattern
+    hours: '17'
+    minutes: '30'
+  - trigger: time_pattern
+    hours: '18'
+    minutes: '30'
+  - trigger: time_pattern
+    hours: '19'
+    minutes: '30'
   - trigger: time_pattern
     hours: '20'
-    minutes: '25'
-  conditions: []
+    minutes: '30'
+  - trigger: time_pattern
+    hours: '21'
+    minutes: '30'
+  conditions:
+  - condition: state
+    entity_id: water_heater.f470_hot_water
+    attribute: operation_mode
+    state: high_demand
   actions:
-  - action: persistent_notification.create
-    metadata: {}
-    data:
-      message: Otetaan pois päältä kuuman veden lisälämmitys, nykyinen lämpötila {{
-        state_attr("water_heater.f470_hot_water", "current_temperature") }} C.
-      title: 'Nibe Activate Heat Pump, ajankohta: {{ (now().timestamp()) | timestamp_custom(''%d.%m.%Y
-        klo %H:%M:%S'') }}'
   - action: water_heater.set_operation_mode
     target:
       entity_id: water_heater.f470_hot_water
     data:
       operation_mode: heat_pump
+  - action: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  mode: single
+- id: '1747312129348'
+  alias: Nibe Activate High Demand - Kallis sähkö, klo 5.01
+  description: 'Niben veden lämpötilan aktivointi pörssisähkön mukaan.
+
+
+    Kytketään lisälämmitys päälle, koska tänään on kallista pörssisähköä.'
+  triggers:
+  - trigger: time_pattern
+    hours: '5'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '6'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '7'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '8'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '19'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '20'
+    minutes: '1'
+  conditions:
+  - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_fi_eur_3_10_0255
+    attribute: max
+    above: 7
+  - condition: numeric_state
+    entity_id: water_heater.f470_hot_water
+    attribute: current_temperature
+    below: 46
+  - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_fi_eur_3_10_0255
+    attribute: current_price
+    below: 3
+  - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_next_hour_price
+    above: 7
+  actions:
+  - action: persistent_notification.create
+    metadata: {}
+    data:
+      message: Nostetaan kuuman veden lämpötilaa, nykyinen lämpötila {{ state_attr("water_heater.f470_hot_water",
+        "current_temperature") }} C.
+      title: 'Nibe Activate High Demand, sähkö on kallista, ajankohta: {{ (now().timestamp())
+        | timestamp_custom(''%d.%m.%Y klo %H:%M:%S'') }}'
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: high_demand
+    target:
+      entity_id: water_heater.f470_hot_water
+  - action: input_boolean.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  - action: timer.start
+    metadata: {}
+    data:
+      duration: 00:15:00
+    target:
+      entity_id: timer.nibe_activate_heat_pump_15_min
+  mode: single
+- id: '1747582232479'
+  alias: Nibe Activate High Demand Solis, <3kwh, klo 20.01
+  description: Käynnistetään lisälämmitys aina yleensä ennen suihkuun menoa, jos aurinkopaneelit
+    tuottavat yli 2.0kWh/tunnissa.
+  triggers:
+  - trigger: time_pattern
+    hours: '20'
+    minutes: '1'
+  conditions:
+  - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_fi_eur_3_10_0255
+    attribute: max
+    below: 3
+  - condition: numeric_state
+    entity_id: sensor.soliscloud_ac_output_total_power
+    above: 2000
+  - condition: numeric_state
+    entity_id: water_heater.f470_hot_water
+    attribute: current_temperature
+    below: 46
+  actions:
+  - action: persistent_notification.create
+    metadata: {}
+    data:
+      message: Nostetaan kuuman veden lämpötilaa, nykyinen lämpötila {{ state_attr("water_heater.f470_hot_water",
+        "current_temperature") }} C.
+      title: 'Nibe Activate High Demand Solis <3kwh, ajankohta: {{ (now().timestamp())
+        | timestamp_custom(''%d.%m.%Y klo %H:%M:%S'') }}'
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: high_demand
+    target:
+      entity_id: water_heater.f470_hot_water
+  - action: input_boolean.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  - action: timer.start
+    target:
+      entity_id: timer.nibe_activate_heat_pump_10_min
+    data:
+      duration: 00:10:00
+  mode: single
+- id: '1747681442990'
+  alias: Nibe Activate Heat Pump - Event
+  description: Palautetaan käyttöveden lämmitys high_demand => heat_pump.
+  triggers:
+  - trigger: event
+    event_type: timer.finished
+    event_data:
+      entity_id: timer.nibe_activate_heat_pump_10_min
+  - trigger: event
+    event_type: timer.finished
+    event_data:
+      entity_id: timer.nibe_activate_heat_pump_15_min
+  - trigger: event
+    event_type: timer.finished
+    event_data:
+      entity_id: timer.nibe_activate_heat_pump_20_min_min
+  conditions:
+  - condition: state
+    entity_id: water_heater.f470_hot_water
+    attribute: operation_mode
+    state: high_demand
+  - condition: state
+    state: 'off'
+    entity_id: input_boolean.kasin_ohjaus_kuuma_vesi_high_demand_ja_ilmanvaihto_100
+  actions:
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: heat_pump
+    target:
+      entity_id: water_heater.f470_hot_water
+  - action: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  mode: single
+- id: '1747768940949'
+  alias: Nibe Activate Heat Pump klo 23.30, yövarmistus
+  description: Tällä varmistetaan, että ei jää Niben tilapäinen luksus (high_demand)
+    lämmitys päälle.
+  triggers:
+  - trigger: time_pattern
+    hours: '23'
+    minutes: '30'
+  conditions:
+  - condition: state
+    entity_id: water_heater.f470_hot_water
+    attribute: operation_mode
+    state: high_demand
+  actions:
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: heat_pump
+    target:
+      entity_id: water_heater.f470_hot_water
+  - action: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  mode: single
+- id: '1747770226886'
+  alias: Nibe Activate High Demand Solis, >5.5kwh, halpa sähkö
+  description: 'Niben veden lämpötilan aktivointi pörssisähkön mukaan.
+
+
+    Kytketään lisälämmitys päälle.
+
+
+    Käynnistetään lisälämmitys, koska sähkö on nyt todella halpaa (alle 1kWh) ja aurinkopaneelit
+    tuottavat yli 5.5kWh/tunnissa.'
+  triggers:
+  - trigger: time_pattern
+    hours: '12'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '13'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '14'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '15'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '16'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '17'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '18'
+    minutes: '1'
+  - trigger: time_pattern
+    hours: '19'
+    minutes: '1'
+  conditions:
+  - condition: numeric_state
+    entity_id: sensor.nordpool_kwh_fi_eur_3_10_0255
+    attribute: current_price
+    below: 1
+  - condition: numeric_state
+    entity_id: sensor.soliscloud_ac_output_total_power
+    above: 5500
+  - condition: numeric_state
+    entity_id: water_heater.f470_hot_water
+    attribute: current_temperature
+    below: 49
+  actions:
+  - action: persistent_notification.create
+    metadata: {}
+    data:
+      message: Nostetaan kuuman veden lämpötilaa, nykyinen lämpötila {{ state_attr("water_heater.f470_hot_water",
+        "current_temperature") }} C.
+      title: 'Nibe Activate High Demand Solis, >5.5kwh, halpa sähkö, ajankohta: {{
+        (now().timestamp()) | timestamp_custom(''%d.%m.%Y klo %H:%M:%S'') }}'
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: high_demand
+    target:
+      entity_id: water_heater.f470_hot_water
+  - action: input_boolean.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.f470_hot_water_high_demand_switch_automation
+  - action: timer.start
+    metadata: {}
+    data:
+      duration: 00:20:00
+    target:
+      entity_id: timer.nibe_activate_heat_pump_20_min
+  mode: single
+- id: '1747921459758'
+  alias: 'Switch: Nibe Activate High Demand - Started - 180 min. - Event'
+  description: Käsin ohjaus dashboardilta.
+  triggers:
+  - trigger: state
+    entity_id:
+    - input_boolean.kasin_ohjaus_kuuma_vesi_high_demand_ja_ilmanvaihto_100
+    from: 'off'
+  conditions: []
+  actions:
+  - action: persistent_notification.create
+    metadata: {}
+    data:
+      message: 1. Nostetaan manuaalisesti kuuman veden lämpötilaa, nykyinen lämpötila
+        {{ state_attr("water_heater.f470_hot_water", "current_temperature") }} C.
+        2. Nostetaan manuaalisesti ilmanvaihto 100%.
+      title: 'Switch: Nibe Activate High Demand - Started - 180 min. - Event'
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: high_demand
+    target:
+      entity_id: water_heater.f470_hot_water
+  - device_id: d80fdc1da8a2b9c200cd60ed727e123c
+    domain: select
+    entity_id: 71d9a7ac0d63abe0d9061d070f81e382
+    type: select_option
+    option: FAN MODE 4
+  - action: input_boolean.turn_on
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.kasin_ohjaus_kuuma_vesi_high_demand_ja_ilmanvaihto_100
+  - action: input_number.set_value
+    metadata: {}
+    data:
+      value: 100
+    target:
+      entity_id: input_number.ilmanvaihto_nopeus
+  - action: timer.start
+    metadata: {}
+    data:
+      duration: 03:00:00
+    target:
+      entity_id: timer.nibe_activate_high_demand_180_min
+  mode: single
+- id: '1747982059091'
+  alias: 'Switch: Nibe Activate Heat Pump Finished - 180 min. - Event'
+  description: Käsin ohjauksen automaattinen sammutus, kun kolme tuntia on mennyt.
+  triggers:
+  - trigger: event
+    event_type: timer.finished
+    event_data:
+      entity_id: timer.nibe_activate_high_demand_180_min
+  - trigger: state
+    entity_id:
+    - input_boolean.kasin_ohjaus_kuuma_vesi_high_demand_ja_ilmanvaihto_100
+    from: 'on'
+  conditions:
+  - condition: state
+    entity_id: water_heater.f470_hot_water
+    attribute: operation_mode
+    state: high_demand
+  actions:
+  - action: persistent_notification.create
+    metadata: {}
+    data:
+      message: 1.Palautettu kuuman veden lämpötilan lisälämmitys, nykyinen lämpötila
+        {{ state_attr("water_heater.f470_hot_water", "current_temperature") }} C.
+        2. Palautettu manuaalisesti ilmanvaihto 65%.
+      title: 'Switch: Nibe Activate Heat Pump Finished - 180 min. - Event'
+  - action: water_heater.set_operation_mode
+    metadata: {}
+    data:
+      operation_mode: heat_pump
+    target:
+      entity_id: water_heater.f470_hot_water
+  - device_id: d80fdc1da8a2b9c200cd60ed727e123c
+    domain: select
+    entity_id: 71d9a7ac0d63abe0d9061d070f81e382
+    type: select_option
+    option: NORMAL
+  - action: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.kasin_ohjaus_kuuma_vesi_high_demand_ja_ilmanvaihto_100
+  - action: input_number.set_value
+    metadata: {}
+    data:
+      value: 65
+    target:
+      entity_id: input_number.ilmanvaihto_nopeus
+  mode: single
+- id: '1747992982936'
+  alias: Nibe Activate Fan Speed Normal klo 23.30, yövarmistus
+  description: ''
+  triggers:
+  - trigger: time_pattern
+    hours: '23'
+    minutes: '30'
+  conditions:
+  - condition: state
+    entity_id: select.fan_mode_47260
+    state: FAN MODE 4
+  actions:
+  - device_id: d80fdc1da8a2b9c200cd60ed727e123c
+    domain: select
+    entity_id: 71d9a7ac0d63abe0d9061d070f81e382
+    type: select_option
+    option: NORMAL
   mode: single
